# scoring-software

./: .gitignore  About.py  AddWindow.py  Audience.py  CustomWidgets.py  CycleTimeReport.py  Deploy.py  EventHub.py  Insert.py  Main.py  PracticeTimerWindow.py  README.md  ResourceManager.py  Scoresheet.py  Scoresheet_submerged.py  Scroller.py  Substrate.py  Sync.py  Team.py  pyproject.toml  requirements.txt  submerged.xml
.github/workflows/: release.yml
